# Video_processing_kit

./: .clangd  .gitignore  CMakeLists.txt  README.md  main.cpp  processingTechniques.cpp  processingTechniques.hpp  test_func.cpp  test_func.hpp  utils.cpp  utils.hpp  vid.cpp  vid.hpp
.cache/clangd/index/: vid.cpp.C822B1108875FDDD.idx  vid.hpp.E4D44961D6FDFAEB.idx
